Added font family and logo

--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,54 @@
 body {
 	font-family: 'Lato', sans-serif;
+	margin: 0;
+}
+	
+.nav-btn,
+.nav-btn:link,
+.nav-btn:visited {
+	display: block;
+	position: absolute;
+	top: 25px;
+	right: 5%;
+	height: 40px;
+	width: 40px;
+	background: rgba(0,0,0,0) url('../img/nav-icon.svg') no-repeat center center;
+}
+
+.nav-btn:hover,
+.nav-btn:focus,
+.nav-btn:active {
+	background-color: rgba(0,0,0,0);
+}
+
+.nav a,
+.nac a:link,
+.nav a:visited {
+	display: block;
+	padding: 1rem;
+	text-align: center;
+	color: #FFF;
+	background-color: #000;
+	text-decoration: none;
+	border: none;
+}
+
+.nav-top {
+	display: none;
+}
+
+.nav-top[data-state="expanded"] {
+	display: block
+}
+
+.home {
+	background: transparent  url(../img/dani-1.jpg) no-repeat center top;
+	background-size: cover;
+}
+
+.logo {
+	width: 300px;
+	display: block;
+	margin: auto;
+	padding: 10em 0px; 
+}
