--- a/css/main.css
+++ b/css/main.css
@@ -120,3 +120,27 @@ ul {
 	margin: auto;
 	padding: 20em 0px; 
 }
+
+.grid {
+	overflow: hidden;
+}
+
+.unit {
+	float: left;
+}
+
+.unit-s-1 {
+	width: 100%;
+}
+
+@media only screen and (min-width: 30em) {
+	.unit-m-1-2 {
+		width: 50%;
+	}
+}
+
+@media only screen and (min-width: 50em) {
+	.unit-l-1-3 {
+		width: 33.3333%;
+	}
+}
