--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,10 @@ ul {
 	width: 100%;
 }
 
+li {
+	padding: 0;
+}
+
 .flex-caption {
 	position: absolute;
 	width: 100%;
@@ -121,6 +125,10 @@ ul {
 	padding: 20em 0px; 
 }
 
+.contact {
+	font-size: .75em;
+}
+
 .grid {
 	overflow: hidden;
 }
@@ -140,7 +148,10 @@ ul {
 }
 
 @media only screen and (min-width: 50em) {
-	.unit-l-1-3 {
-		width: 33.3333%;
+	.unit-l-1-4 {
+		width: 25%;
+	}
+	.unit-m-1-2 {
+		width: 50%;
 	}
 }
