Adjusted margins for nav

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,17 @@
-body {
+html {
 	font-family: 'Lato', sans-serif;
+	font-weight: 100;
+}
+
+body {
 	margin: 0;
 }
 
-html {
-	font-weight: 100;
+h1, h2, h3, h4, h5, h6,
+p, ul, ol, dl, dd, figure,
+blockquote, details, hr,
+fieldset, pre, table {
+  margin: 0;
 }
 	
 .nav-btn,
@@ -38,7 +45,7 @@ html {
 }
 
 .nav {
-	margin: -1em 0;
+	margin: 0;
 	width: 100%;
 }
 
@@ -49,7 +56,6 @@ html {
 
 ul {
 	list-style-type:none;
-	margin-bottom: 0;
 	padding: 0;
 }
 
@@ -97,7 +103,6 @@ li {
 	margin: 0;
 	padding: 1rem 0;
 	text-align: center;
-	font-weight: 100;
 }
 
 .flex-direction-nav a {
