--- a/css/main.css
+++ b/css/main.css
@@ -52,10 +52,15 @@ fieldset, pre, table {
 .nav a:hover,
 .nav a:active {
 	color: rgba(0,0,0,1.00);
+	background-color: rgba(255,255,255,.15)
 }
 
 ul {
 	list-style-type:none;
+	padding: 0;
+}
+
+li {
 	padding: 0;
 }
 
@@ -89,10 +94,6 @@ ul {
 
 .slides img {
 	width: 100%;
-}
-
-li {
-	padding: 0;
 }
 
 .flex-caption {
