Adjusted slideshow images

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,10 @@ fieldset, pre, table {
 	width: 100%;
 }
 
+img {
+	width: 100%;
+}
+
 .nav a:hover,
 .nav a:active {
 	color: rgba(0,0,0,1.00);
@@ -89,11 +93,6 @@ li {
 	display: block;
 	margin: auto;
 	padding: 20em 0px; 
-}
-
-
-.slides img {
-	width: 100%;
 }
 
 .flex-caption {
