--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ li {
 	padding: 20em 0px; 
 }
 
-.flex-caption {
+.caption {
 	position: absolute;
 	width: 100%;
 	color: #FFF;
@@ -103,22 +103,6 @@ li {
 	margin: 0;
 	padding: 1rem 0;
 	text-align: center;
-}
-
-.flex-direction-nav a {
-	color: white;
-}
-
-.flex-control-paging li a {
-	background: white;
-}
-
-.flex-control-paging li a.flex-active {
-	background: rgba(109,109,109,1);
-}
-
-.flex-control-paging li a:hover {
-	background: rgba(183,183,183,1.00);
 }
 
 .error {
