--- a/css/main.css
+++ b/css/main.css
@@ -13,51 +13,6 @@ blockquote, details, hr,
 fieldset, pre, table {
   margin: 0;
 }
-	
-.nav-btn,
-.nav-btn:link,
-.nav-btn:visited {
-	display: block;
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	height: 40px;
-	width: 40px;
-	background: rgba(0,0,0,0) url('../img/nav-icon.svg') no-repeat center center;
-}
-
-.nav-btn:hover,
-.nav-btn:focus,
-.nav-btn:active {
-	background-color: rgba(0,0,0,0);
-}
-
-.nav a,
-.nav a:link,
-.nav a:visited {
-	display: block;
-	text-align: center;
-	padding: 1.5em;
-	color: #FFF;
-	background-color: rgba(0,0,0,0);
-	text-decoration: none;
-	border: none;
-}
-
-.nav {
-	margin: 0;
-	width: 100%;
-}
-
-img {
-	width: 100%;
-}
-
-.nav a:hover,
-.nav a:active {
-	color: rgba(0,0,0,1.00);
-	background-color: rgba(255,255,255,.15)
-}
 
 ul {
 	list-style-type:none;
@@ -68,8 +23,53 @@ li {
 	padding: 0;
 }
 
+img {
+	width: 100%;
+}
+
+.nav {
+	margin: 0;
+	width: 100%;
+	position: fixed;
+}
+
+.nav-btn,
+.nav-btn:link,
+.nav-btn:visited {
+	position: fixed;
+	width: 100%;
+	padding: 1em 0;
+	background: rgba(255,255,255,.5) url('../img/nav-icon.svg') no-repeat right center;
+}
+
+.nav-btn:hover,
+.nav-btn:focus,
+.nav-btn:active {
+	background-color: rgba(255,255,255,.5);
+}
+
+.nav a,
+.nav a:link,
+.nav a:visited {
+	display: block;
+	text-align: center;
+	padding: 1em;
+	top: 2em;
+	color: #FFF;
+	text-decoration: none;
+	border: none;
+	background-color: rgba(255,255,255,.5)
+}
+
+.nav a:hover,
+.nav a:active {
+	color: rgba(0,0,0,1.00);
+	background-color: rgba(255,255,255,0)
+}
+
 .nav-top {
 	display: none;
+	top: 3.2em;
 }
 
 .nav-top[data-state="expanded"] {
@@ -84,7 +84,7 @@ li {
 }
 
 .top {
-	background: transparent  url('http://placehold.it/1500x1500') no-repeat center top;
+	background: transparent  url('../img/background.jpg') no-repeat center top;
 	background-size: cover;
 }
 
@@ -92,7 +92,7 @@ li {
 	width: 240px;
 	display: block;
 	margin: auto;
-	padding: 20em 0px; 
+	padding: 15em 0px; 
 }
 
 .caption {
