--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,24 @@ fieldset, pre, table {
   margin: 0;
 }
 
+.social {
+	position: fixed;
+	background-color: rgba(255,255,255,.5);
+	width: 100%;
+	height: 4em;
+}
+
+.social li {
+	display: inline-block;
+}
+
+.fa-facebook,
+.fa-twitter {
+	padding-top: 1.5em;
+	padding-left: 1.5em;
+	color: rgba(255,255,255,1.00);
+}
+
 ul {
 	list-style-type:none;
 	padding: 0;
@@ -37,15 +55,11 @@ img {
 .nav-btn:link,
 .nav-btn:visited {
 	position: fixed;
-	width: 100%;
-	padding: 1em 0;
-	background: rgba(255,255,255,.5) url('../img/nav-icon.svg') no-repeat right center;
-}
-
-.nav-btn:hover,
-.nav-btn:focus,
-.nav-btn:active {
-	background-color: rgba(255,255,255,.5);
+	top: 10px;
+	right: 10px;
+	height: 40px;
+	width: 40px;
+	background: rgba(0,0,0,0) url('../img/nav-icon.svg') no-repeat right center;
 }
 
 .nav a,
@@ -69,7 +83,7 @@ img {
 
 .nav-top {
 	display: none;
-	top: 3.2em;
+	top: 4em;
 }
 
 .nav-top[data-state="expanded"] {
@@ -143,6 +157,21 @@ img {
 	.unit-m-1-2 {
 		width: 50%;
 	}
+		
+	.nav li{
+		float: left;
+		width: 33.33%;
+	}
+	
+	.nav-btn {
+		display: none;
+	}
+	
+	.nav-top {
+		display: block;
+		top: 0;
+	}
+	
 }
 
 @media only screen and (min-width: 60em) {
@@ -150,6 +179,11 @@ img {
 		width: 25%;
 	}
 	.unit-l-1-2 {
+		width: 50%;
+	}
+	
+	.nav-top {
+		display: block;
 		width: 50%;
 	}
 }
