--- a/css/main.css
+++ b/css/main.css
@@ -19,17 +19,21 @@ fieldset, pre, table {
 	background-color: rgba(255,255,255,.5);
 	width: 100%;
 	height: 4em;
+	padding-left: 1.5em;
 }
 
 .social li {
 	display: inline-block;
+	padding-top: 1.25em;
 }
 
-.fa-facebook,
-.fa-twitter {
-	padding-top: 1.5em;
-	padding-left: 1.5em;
+.social li a,
+.social li a:link,
+.social li a:visited {
+	display: inline-block;
 	color: rgba(255,255,255,1.00);
+	width: 20px;
+	height: 40px;
 }
 
 ul {
