--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ img {
 .nav a:visited {
 	display: block;
 	text-align: center;
-	padding: 1em;
+	margin: 1em;
 	top: 2em;
 	color: #000;
 	text-decoration: none;
@@ -193,9 +193,9 @@ img {
 		background: rgba(0,0,0,0);
 	}
 	
-	.nav li:hover,
-	.nav li:active {
-		padding: 0;
+	.nav a:hover,
+	.nav a:active {
+		padding-bottom: .5em;
     	border-bottom: 1px solid rgba(255,255,255,1.00);
 	}
 }
