--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ img {
 .nav a:visited {
 	display: block;
 	text-align: center;
-	margin: 1em;
+	padding: 1em;
 	top: 2em;
 	color: #000;
 	text-decoration: none;
@@ -190,12 +190,14 @@ img {
 	.nav a,
 	.nav a:link,
 	.nav a:visited {
+		margin: 1em;
+		padding-bottom: 1em;
 		background: rgba(0,0,0,0);
 	}
 	
 	.nav a:hover,
 	.nav a:active {
-		padding-bottom: .5em;
+		
     	border-bottom: 1px solid rgba(255,255,255,1.00);
 	}
 }
