--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,6 @@ ul {
 	padding: 0;
 }
 
-li {
-	padding: 0;
-}
 
 img {
 	width: 100%;
@@ -185,13 +182,14 @@ img {
 	
 	.nav ul {
 		float: right;
+		padding-right: 1em;
 	}
 	
 	.nav a,
 	.nav a:link,
 	.nav a:visited {
-		margin: 1em;
-		padding-bottom: 1em;
+		margin: .15em .5em;
+		padding: 1em 0 .5em;
 		background: rgba(0,0,0,0);
 	}
 	
