--- a/css/main.css
+++ b/css/main.css
@@ -105,8 +105,7 @@ img {
 }
 
 .top {
-	background: transparent  url('../img/background.jpg') no-repeat center top;
-	width: 100;
+	background: transparent  url('../img/header-background.svg') no-repeat center top;
 	background-size: cover;
 }
 
@@ -135,15 +134,20 @@ img {
 }
 
 .contact {
-	background: transparent url('http://placehold.it/1500x1500') no-repeat center top;
-	background-size: cover;
+	background-color: rgba(255,255,255,1.00);
 }
 
-.contact h3,
-.contact p {
-	font-size: .75em;
-	padding: 1.5em;
-	background-color: rgba(0,0,0,.1);
+.contact img {
+	width: 80px;
+	display: block;
+	margin: auto;
+	padding: 2em 0 1em;
+}
+
+.contact h4 {
+	text-align: center;
+	font-size: 1em;
+	padding-bottom: 1em;
 }
 
 .grid {
@@ -162,8 +166,13 @@ img {
 	.unit-m-1 {
 		width: 100%;
 	}
+	
 	.unit-m-1-2 {
 		width: 50%;
+	}
+	
+	.unit-m-1-3 {
+		width: 33.3333%;
 	}
 		
 	.nav li {
@@ -206,5 +215,9 @@ img {
 	}
 	.unit-l-1-2 {
 		width: 50%;
+	}
+	
+	.unit-l-1-3 {
+		width: 33.3333%;
 	}
 }
