--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,11 @@ img {
 	padding: 2em 0 1em;
 }
 
-.about h4,
+.about h4 {
+	text-align: center;
+	font-size: 3em;
+	padding: 1em;
+}
 .contact h4 {
 	text-align: center;
 	font-size: 1em;
