--- a/css/main.css
+++ b/css/main.css
@@ -133,8 +133,23 @@ img {
 	padding: 20em 0px; 
 }
 
+.about h4 {
+	text-align: center;
+	font-size: 3em;
+	padding: 1em;
+}
+
+.about p {
+	display: block;
+	margin: auto;
+	padding: 0 0 1.5em;
+	width: 65%;
+	font-size: .75em;
+}
+
 .contact {
-	background-color: rgba(255,255,255,1.00);
+	background: transpart url('../img/stardust.png'); no-repeat center top;
+	background-size: cover;
 }
 
 .contact img {
@@ -144,11 +159,6 @@ img {
 	padding: 2em 0 1em;
 }
 
-.about h4 {
-	text-align: center;
-	font-size: 3em;
-	padding: 1em;
-}
 .contact h4 {
 	text-align: center;
 	font-size: 1em;
