--- a/css/main.css
+++ b/css/main.css
@@ -23,13 +23,43 @@ img {
 	width: 100%;
 }
 
+.logo {
+	width: 240px;
+	display: block;
+	margin: auto;
+	padding: 15em 0px;
+}
+
+.top {
+	background: transparent  url('../img/header-background.svg') no-repeat center top;
+	background-size: cover;
+}
+
+.caption {
+	color: #FFF;
+	background-color: rgba(0,0,0,.35);
+	margin: 0;
+	padding: 1rem 0;
+	text-align: center;
+}
+
+.error {
+	text-align: center;
+	background: transparent  url('../img/background.jpg') no-repeat center top;
+	background-size: cover;
+	display: block;
+	margin: auto;
+	padding: 20em 0px; 
+}
+
+/*-------------------------SOCIAL LINKS SECTION-------------------------*/
+
 .social {
 	position: fixed;
 	background-color: rgba(255,255,255,.75);
 	width: 100%;
 	height: 4em;
 	padding-left: 1.5em;
-	
 }
 
 .social li {
@@ -51,6 +81,8 @@ img {
 .social li a:focus {
 	color: rgba(255,255,255,1.00);
 }
+
+/*-------------------------NAVIGATION SECTION-------------------------*/
 
 .nav {
 	margin: 0;
@@ -104,66 +136,75 @@ img {
 	overflow: hidden;
 }
 
-.top {
-	background: transparent  url('../img/header-background.svg') no-repeat center top;
-	background-size: cover;
-}
+/*-------------------------ABOUT SECTION-------------------------*/
 
-.logo {
-	width: 240px;
+.about img {
+	width: 80px;
 	display: block;
 	margin: auto;
-	padding: 15em 0px; 
-}
-
-.caption {
-	color: #FFF;
-	background-color: rgba(0,0,0,.35);
-	margin: 0;
-	padding: 1rem 0;
-	text-align: center;
-}
-
-.error {
-	text-align: center;
-	background: transparent  url('../img/background.jpg') no-repeat center top;
-	background-size: cover;
-	display: block;
-	margin: auto;
-	padding: 20em 0px; 
+	padding: 4em 0 .75em;
 }
 
 .about h4 {
 	text-align: center;
-	font-size: 3em;
-	padding: 1em;
+	font-size: .875em;
+	padding-bottom: 4em;
 }
 
-.about p,
-.contact p {
+.about p {
 	display: block;
 	margin: auto;
-	padding: 0 0 2em;
 	width: 70%;
 	font-size: .875em;
+	padding-top: 1em;
 }
+
+
+.intro {
+	text-align: center;
+	padding: 5em 0;
+	background-color: rgba(0,0,0,.5);
+}
+
+.intro h3 {
+	font-size: 2em;
+}
+
+/*-------------------------CONTACT SECTION-------------------------*/
 
 .contact {
-	background-color: rgba(255,255,255,1.00);
-	padding: 2em 0 7em;
+	text-align: center;
+	padding: 3em 0 0;
 }
-
 .contact img {
 	width: 80px;
-	display: block;
-	margin: auto;
-	padding: 5em 0 1em;
+	margin-top: 1.5em;
+}
+
+.contact img:hover {
+	width: 90px;
+	margin-top: .875em;
+}
+
+.contact h1 {
+	font-weight: 100;
+	padding: .75em 0;
 }
 
 .contact h4 {
-	text-align: center;
-	font-size: .875em;
+	font-weight: 100;
+	font-size: 1em;
+	padding: .25em 0;
 }
+
+.contact p {
+	font-size: .75em;
+	padding: 2em;
+	margin-top: 4em;
+	background-color: rgba(0,0,0,.5);
+}
+
+/*-------------------------GRID-------------------------*/
 
 .grid {
 	overflow: hidden;
@@ -204,7 +245,7 @@ img {
 		top: 0;
 	}
 	
-	.nav ul {
+	ul {
 		float: right;
 		padding-right: 1em;
 	}
