--- a/css/main.css
+++ b/css/main.css
@@ -54,12 +54,16 @@ img {
 
 /*-------------------------SOCIAL LINKS SECTION-------------------------*/
 
-.social {
+.nav-logo {
 	position: fixed;
 	background-color: rgba(255,255,255,.75);
 	width: 100%;
 	height: 4em;
-	padding-left: 1.5em;
+	text-align: center;
+}
+
+.nav-logo img {
+	width: 200px;
 }
 
 .social li {
@@ -73,13 +77,16 @@ img {
 	display: inline-block;
 	color: rgba(0,0,0,1.00);
 	width: 20px;
-	height: 40px;
 }
 
 .social li a:hover,
 .social li a:active,
 .social li a:focus {
 	color: rgba(255,255,255,1.00);
+}
+
+.fa {
+	width: 60px;
 }
 
 /*-------------------------NAVIGATION SECTION-------------------------*/
@@ -179,11 +186,11 @@ img {
 .contact img {
 	width: 80px;
 	margin-top: 1.5em;
+	margin-top: 1em;
 }
 
 .contact img:hover {
-	width: 90px;
-	margin-top: .875em;
+	opacity: .25;
 }
 
 .contact h1 {
@@ -200,7 +207,7 @@ img {
 .contact p {
 	font-size: .75em;
 	padding: 2em;
-	margin-top: 4em;
+	margin-top: 2em;
 	background-color: rgba(0,0,0,.5);
 }
 
