--- a/css/main.css
+++ b/css/main.css
@@ -52,41 +52,18 @@ img {
 	padding: 20em 0px; 
 }
 
-/*-------------------------SOCIAL LINKS SECTION-------------------------*/
+/*-------------------------LOGO SECTION-------------------------*/
 
 .nav-logo {
 	position: fixed;
 	background-color: rgba(255,255,255,.75);
 	width: 100%;
 	height: 4em;
-	text-align: center;
 }
 
 .nav-logo img {
 	width: 200px;
-}
-
-.social li {
-	display: inline-block;
-	padding-top: 1.25em;
-}
-
-.social li a,
-.social li a:link,
-.social li a:visited {
-	display: inline-block;
-	color: rgba(0,0,0,1.00);
-	width: 20px;
-}
-
-.social li a:hover,
-.social li a:active,
-.social li a:focus {
-	color: rgba(255,255,255,1.00);
-}
-
-.fa {
-	width: 60px;
+	padding-top: .75em;
 }
 
 /*-------------------------NAVIGATION SECTION-------------------------*/
@@ -184,9 +161,8 @@ img {
 	padding: 3em 0 0;
 }
 .contact img {
-	width: 80px;
-	margin-top: 1.5em;
-	margin-top: 1em;
+	width: 70px;
+	opacity: .5;
 }
 
 .contact img:hover {
@@ -209,6 +185,31 @@ img {
 	padding: 2em;
 	margin-top: 2em;
 	background-color: rgba(0,0,0,.5);
+}
+
+/*-------------------------SOCIAL LINKS SECTION-------------------------*/
+
+.social {
+	width: 100%;
+}
+
+.social li {
+	display: inline-block;
+	padding-top: 1.25em;
+}
+
+.social li a,
+.social li a:link,
+.social li a:visited {
+	display: inline-block;
+	color: rgba(0,0,0,1.00);
+	width: 20px;
+}
+
+.social li a:hover,
+.social li a:active,
+.social li a:focus {
+	color: rgba(255,255,255,1.00);
 }
 
 /*-------------------------GRID-------------------------*/
@@ -252,7 +253,7 @@ img {
 		top: 0;
 	}
 	
-	ul {
+	.nav ul {
 		float: right;
 		padding-right: 1em;
 	}
