--- a/css/main.css
+++ b/css/main.css
@@ -23,14 +23,6 @@ img {
 	width: 100%;
 }
 
-.caption {
-	color: #FFF;
-	background-color: rgba(0,0,0,.35);
-	margin: 0;
-	padding: 1rem 0;
-	text-align: center;
-}
-
 .error {
 	text-align: center;
 	background: transparent  url('../img/background.jpg') no-repeat center top;
@@ -160,6 +152,18 @@ img {
 	font-size: 1.5em;
 }
 
+/*-------------------------PORTFOLIO SECTION-------------------------*/
+
+.caption {
+	color: #FFF;
+	background-color: rgba(0,0,0,.35);
+	margin: 0;
+	padding: 1rem 0;
+	text-align: center;
+	position: absolute;
+	width: 100%;
+
+}
 /*-------------------------CONTACT SECTION-------------------------*/
 
 .contact {
