--- a/css/main.css
+++ b/css/main.css
@@ -154,14 +154,17 @@ img {
 
 /*-------------------------PORTFOLIO SECTION-------------------------*/
 
-.caption {
-	color: #FFF;
-	background-color: rgba(0,0,0,.35);
-	margin: 0;
-	padding: 1rem 0;
-	text-align: center;
-	position: absolute;
+.flexslider {
 	width: 100%;
+	position: absolute;
+}
+
+.caption {
+	bottom: 1.5rem;
+	color: black;
+	background-color: rgba(0,0,0,0);
+	padding: 1rem;
+	text-align: center;
 }
 
 .portfolio h1 {
@@ -306,10 +309,6 @@ img {
 	
 	.home img {
 		width: 240px;
-	}
-	
-	.caption {
-		width: 50%;
 	}
 }
 
