--- a/flexslider/flexslider.css
+++ b/flexslider/flexslider.css
@@ -90,7 +90,5 @@ html[xmlns] .slides {display: block;}
 .flex-control-thumbs img:hover {opacity: 1;}
 .flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
 
-@media screen and (max-width: 860px) {
-  .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
-  .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
-}
+  .flex-direction-nav .flex-prev { opacity: .5; left: 10px;}
+  .flex-direction-nav .flex-next { opacity: .5; right: 10px;}
