--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ img {
 	text-align: center;
 	background: transparent url('../img/header-background.svg') no-repeat center center;
 	background-size: cover;
-	padding: 18em 0;
+	padding: 15em 0;
 }
 
 .home h3 {
@@ -130,7 +130,7 @@ img {
 
 .home p {
 	font-size: .75em;
-	border: 1px solid white;
+	border: 1px solid rgba(0,0,0,1.00);
 	margin: 1em 20%;
 	padding: 1em;
 }
@@ -315,6 +315,18 @@ img {
 	
 	.home img {
 		width: 240px;
+	}
+	
+	.home {
+		padding: 18em 0;
+	}
+
+	.home h3 {
+		font-size: 2.5em;
+	}
+
+	.home p {
+		font-size: 1em;
 	}
 }
 
