Changed background photo for home page

--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ img {
 
 .home {
 	text-align: center;
-	background: transparent url('../img/header-background.svg') no-repeat center center;
+	background: transparent url('../img/hk.jpg') no-repeat center center;
 	background-size: cover;
 	padding: 10em 0;
 }
