--- a/css/main.css
+++ b/css/main.css
@@ -152,13 +152,13 @@ img {
 .about {
 	background: transparent  url('../img/noisy.jpg') no-repeat center top;
 	background-size: cover;
+	padding: 6em 0 2em;
 }
 
 .about img {
 	width: 80px;
 	display: block;
 	margin: auto;
-	padding: 0 0 .75em;
 }
 
 .about h1 {
@@ -182,7 +182,7 @@ img {
 
 .intro {
 	text-align: center;
-	padding: 5em 0 3em;
+	padding: 0 0 3em;
 }
 
 .intro h1 {
@@ -325,6 +325,10 @@ img {
 	.nav a:active {	
     	border-bottom: 1px solid rgba(255,255,255,1.00);
 	}
+	
+	.home {
+		padding: 19em 0; 
+	}
 }
 
 @media only screen and (min-width: 60em) {
@@ -337,5 +341,10 @@ img {
 	
 	.unit-l-1-3 {
 		width: 33.3333%;
+	}
+	
+	.about p {
+		width: 60%;
+		font-size: 1em;
 	}
 }
