--- a/css/main.css
+++ b/css/main.css
@@ -207,8 +207,8 @@ img {
 .portfolio h1 {
 	text-align: center;
 	padding: 3em;
-	background-color: rgba(0,0,0,.75);
-	color: rgba(255,255,255,1.00);
+	background-color: rgba(255,255,255,1.00);
+	color: rgba(0,0,0,1.00);
 }
 
 /*-------------------------CONTACT SECTION-------------------------*/
