--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ img {
 	background-color: rgba(255,255,255,.75);
 	width: 100%;
 	height: 4em;
+	z-index: 1;
 }
 
 .nav-logo img {
@@ -80,6 +81,7 @@ img {
 	margin: 0;
 	width: 100%;
 	position: fixed;
+	z-index: 1;
 }
 
 .nav-btn,
