--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@ img {
 
 .contact {
 	text-align: center;
-	padding: 10em 0 0;
+	padding: 8em 0 0;
 	background: transparent  url('../img/noisy.png') no-repeat center top;
 	background-size: cover;
 }
@@ -338,11 +338,14 @@ img {
 	}
 	
 	.about {
-	background: transparent  url('../img/noisyx2.png') no-repeat center top;
-	background-size: cover;
-	padding: 6em 0 2em;
+		background: transparent  url('../img/noisyx2.png') no-repeat center top;
+		background-size: cover;
+		padding: 6em 0 2em;
 	}
-
+	
+	.contact {
+		padding: 10em 0 0;
+	}
 }
 
 @media only screen and (min-width: 60em) {
