--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ img {
 	background-color: rgba(255,255,255,.75);
 	width: 100%;
 	height: 4em;
-	z-index: 1;
+	z-index: 200;
 }
 
 .nav-logo img {
@@ -200,10 +200,12 @@ img {
 
 .photo-caption {
 	color: rgba(0,0,0,1.00);
-	background-color: rgba(0,0,0,0);
-	padding: 1rem;
+	background-color: rgba(255,255,255,.75);
+	padding: 1rem 0;
 	text-align: center;
-	top: 1em;
+	position: absolute;
+	width: 100%;
+	z-index: 2;
 }
 
 .portfolio h1 {
