--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,16 @@ img {
 	background-size: cover;
 	display: block;
 	margin: auto;
-	padding: 20em 0px; 
+	padding: 12em 1em;
+}
+
+.error h1 {
+	font-weight: 100; 
+	font-size: 5em;
+}
+
+.error h2 {
+	font-weight: 200;
 }
 
 /*-------------------------LOGO SECTION-------------------------*/
@@ -356,6 +365,14 @@ img {
 	
 	.contact h1 {
 		font-size: 2.25em;
+	}
+	
+	.error {
+		padding: 16em 2em;
+	}
+	.error h1 {
+	font-size: 10em;
+
 	}
 }
 
