--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ img {
 	background-size: cover;
 	display: block;
 	margin: auto;
-	padding: 12em 0;
+	padding: 20em 0;
 }
 
 .error h1 {
@@ -381,7 +381,11 @@ img {
 	.contact h1 {
 		font-size: 2.25em;
 	}
-
+	
+	.error {
+		padding: 12em 0;
+	}
+	
 	.error h1 {
 		font-size: 10em;
 	}
