--- a/css/main.css
+++ b/css/main.css
@@ -344,10 +344,9 @@ img {
 
 .photo-caption {
 	color: rgba(0,0,0,1.00);
-	background-color: rgba(255,255,255,.25);
+	background-color: rgba(255,255,255,.75);
 	text-align: center;
 	position: absolute;
-	padding-top: 25%;
 	width: 100%;
 	height: 100%;
 	z-index: 2;
@@ -356,6 +355,16 @@ img {
 	-moz-transition: opacity 1s ease-out;
 	-webkit-transition: opacity 1s ease-out;
 	-o-transition: opacity 1s ease-out;
+}
+
+.photo-caption h3 {
+	font-weight: 400;
+	padding: 4em 5% 0;
+}
+
+.photo-caption p {
+	padding: 1em 5%;
+	font-size: .875em;
 }
 
 .photo-caption:hover {
