--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ img {
 }
 
 .main-logo {
-	width: 275px;
+	width: 300px;
 	opacity: 0;
 }
 
@@ -238,6 +238,7 @@ img {
 
 .subhead {
 	opacity: 0;
+	font-size: .875em;
 }
 
 .js-subhead-fade {
