--- a/css/main.css
+++ b/css/main.css
@@ -372,6 +372,7 @@ img {
 
 .portfolio {
 	background-color: rgba(255,255,255,1.00);
+	margin: 5em 0;
 }
 
 .portfolio h1 {
@@ -453,20 +454,28 @@ img {
 }
 
 .unit-s-1 {
+	width: 80%;
+}
+
+.unit-s-1-icon {
 	width: 100%;
 }
 
 @media only screen and (min-width: 35em) {
+	
+	.flexslider {
+		margin: 2.5% 5%;
+	}
 	.unit-m-1 {
 		width: 100%;
 	}
 	
 	.unit-m-1-2 {
-		width: 50%;
+		width: 40%;
 	}
 	
 	.unit-m-1-3 {
-		width: 33.3333%;
+		width: 30%;
 	}
 		
 	.nav li {
@@ -550,7 +559,7 @@ img {
 
 @media only screen and (min-width: 60em) {
 	.unit-l-1-4 {
-		width: 25%;
+		width: 22.5%;
 	}
 	.unit-l-1-2 {
 		width: 50%;
