--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@ img {
 	-moz-transition: background-color 300ms ease-in;
 	-webkit-transition: background-color 300ms ease-in;
 	-o-transition: background-color 300ms ease-in;
+	font-style: italic;
 }
 
 .nav a:hover,
@@ -386,8 +387,7 @@ img {
 .contact {
 	text-align: center;
 	padding: 4em 0 0;
-	background: transparent  url('../img/noisy.png') no-repeat center top;
-	background-size: cover;
+	background-color: rgba(255,255,255,1.00);
 }
 .contact img {
 	width: 70px;
@@ -506,7 +506,7 @@ img {
 	}
 	
 	.home {
-		padding: 19em 0; 
+		padding: 20em 0; 
 		background: transparent url('../img/other-8-small-screen.png') no-repeat center center;
 	background-size: cover;
 	}
@@ -562,5 +562,10 @@ img {
 	.about p {
 		width: 60%;
 		font-size: 1em;
+	}
+	
+	.portfolio {
+		width: 80%;
+		margin: auto;
 	}
 }
