--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ img {
 	color: rgba(0,0,0,.5);
 }
 
-/*-------------------------LOGO SECTION-------------------------*/
+/*-------------------------SMALL LOGO SECTION-------------------------*/
 
 .nav-logo {
 	position: fixed;
@@ -89,11 +89,12 @@ img {
 	width: 100%;
 	height: 4em;
 	z-index: 200;
+	text-align: center;
 }
 
 .nav-logo img {
-	width: 150px;
-	padding: .8em 0 0 .35em;
+	width: 90px;
+	padding-top: .75em;
 }
 
 .nav-logo img:hover {
@@ -180,7 +181,7 @@ img {
 }
 
 .main-logo {
-	width: 275px;
+	width: 300px;
 	opacity: 0;
 }
 
