--- a/css/main.css
+++ b/css/main.css
@@ -304,7 +304,7 @@ img {
 }
 
 .about img {
-	width: 80px;
+	width: 200px;
 	display: block;
 	margin: auto;
 }
@@ -464,10 +464,6 @@ img {
 	.unit-m-1-2 {
 		width: 50%;
 	}
-	
-	.unit-m-1-3 {
-		width: 33.3333%;
-	}
 		
 	.nav li {
 		display: inline-block;
@@ -516,6 +512,10 @@ img {
 		padding: 6em 0 2em;
 	}
 	
+	.about img {
+		width: 400px;
+	}
+	
 	.contact {
 		padding: 16em 0 0;
 	}
@@ -555,11 +555,7 @@ img {
 	.unit-l-1-2 {
 		width: 50%;
 	}
-	
-	.unit-l-1-3 {
-		width: 33.3333%;
-	}
-	
+
 	.about p {
 		width: 60%;
 		font-size: 1em;
