--- a/css/main.css
+++ b/css/main.css
@@ -95,10 +95,15 @@ img {
 .nav-logo img {
 	width: 90px;
 	padding-top: .75em;
+	background-color: rgba(0,0,0,0);
 }
 
 .nav-logo img:hover {
 	opacity: .25;
+	transition: opacity 300ms ease-in;
+	-moz-transition: opacity 300ms ease-in;
+	-webkit-transition: opacity 300ms ease-in;
+	-o-transition: opacity 300ms ease-in;
 }
 
 /*-------------------------NAVIGATION SECTION-------------------------*/
@@ -125,6 +130,10 @@ img {
 .nav-btn:hover,
 .nav-btn:active {
 	opacity: .5;
+	transition: opacity 300ms ease-in;
+	-moz-transition: opacity 300ms ease-in;
+	-webkit-transition: opacity 300ms ease-in;
+	-o-transition: opacity 300ms ease-in;
 }
 
 .nav a,
@@ -151,7 +160,7 @@ img {
 
 .nav a:hover,
 .nav a:active {
-	color: rgba(255,255,255,1.00);
+	color: rgba(191,222,213,1.00);
 	background-color: rgba(0,0,0,.5);
 }
 
@@ -304,7 +313,7 @@ img {
 }
 
 .about img {
-	width: 200px;
+	width: 275px;
 	display: block;
 	margin: auto;
 }
@@ -388,7 +397,7 @@ img {
 .contact {
 	text-align: center;
 	padding: 4em 0 0;
-	background-color: rgba(255,255,255,1.00);
+	background-color: rgba(191,222,213,1);
 }
 .contact img {
 	width: 70px;
@@ -396,8 +405,13 @@ img {
 	padding: 4em 0 0;
 }
 
+
 .contact img:hover {
 	opacity: .5;
+	transition: opacity 300ms ease-in;
+	-moz-transition: opacity 300ms ease-in;
+	-webkit-transition: opacity 300ms ease-in;
+	-o-transition: opacity 300ms ease-in;
 }
 
 .contact h1 {
@@ -410,11 +424,15 @@ img {
 	padding: .25em 0;
 }
 
+.contact h5 {
+	padding-top: .5em;
+}
+
 .contact p {
 	font-size: .75em;
 	padding: 2em;
 	margin-top: 2em;
-	background-color: rgba(0,0,0,.25);
+	background-color: rgba(191,222,213,1);
 }
 
 /*-------------------------SOCIAL LINKS SECTION-------------------------*/
@@ -440,7 +458,12 @@ img {
 .social li a:active,
 .social li a:focus {
 	color: rgba(255,255,255,1.00);
+	transition: color 300ms ease-in;
+	-moz-transition: color 300ms ease-in;
+	-webkit-transition: color 300ms ease-in;
+	-o-transition: color 300ms ease-in;
 }
+	
 
 /*-------------------------GRID-------------------------*/
 
@@ -552,12 +575,10 @@ img {
 	.unit-l-1-4 {
 		width: 25%;
 	}
-	.unit-l-1-2 {
-		width: 50%;
-	}
-
+	
 	.about p {
 		width: 60%;
 		font-size: 1em;
+		text-align: center;
 	}
 }
