--- a/css/main.css
+++ b/css/main.css
@@ -87,14 +87,15 @@ img {
 	position: fixed;
 	background-color: rgba(255,255,255,.75);
 	width: 100%;
-	height: 4em;
+	height: 6em;
 	z-index: 200;
 	text-align: center;
 }
 
 .nav-logo img {
 	width: 90px;
-	padding-top: .75em;
+	padding-top: 1.7em;
+	padding-left: 1em;
 	background-color: rgba(0,0,0,0);
 }
 
@@ -120,7 +121,7 @@ img {
 .nav-btn:link,
 .nav-btn:visited {
 	position: fixed;
-	top: 1px;
+	top: 15px;
 	right: 0px;
 	height: 60px;
 	width: 60px;
@@ -146,7 +147,7 @@ img {
 	color: rgba(0,0,0,1.00);
 	text-decoration: none;
 	border: none;
-	background-color: rgba(255,255,255,.75);
+	background-color: rgba(255,255,255,.25);
 	transition: color 300ms ease-in;
 	-moz-transition: color 300ms ease-in;
 	-webkit-transition: color 300ms ease-in;
@@ -166,7 +167,7 @@ img {
 
 .nav-top {
 	display: none;
-	top: 4.6em;
+	top: 6.85em;
 }
 
 .nav-top[data-state="expanded"] {
@@ -480,6 +481,11 @@ img {
 }
 
 @media only screen and (min-width: 32em) {
+	.nav-logo{
+		text-align: left;
+		padding-left: .75em;
+	}
+	
 	.unit-m-1 {
 		width: 100%;
 	}
@@ -490,7 +496,7 @@ img {
 		
 	.nav li {
 		display: inline-block;
-		padding-top: .25em;
+		padding-top: 1.25em;
 	}
 	
 	.nav-btn {
@@ -522,7 +528,7 @@ img {
 	.nav a:hover,
 	.nav a:active {	
     	opacity: .75;
-		color: rgba(0,0,0,.75);
+		color: rgba(191,222,213,1.00);
 	}
 	
 	.home {
@@ -572,8 +578,8 @@ img {
 }
 
 @media only screen and (min-width: 60em) {
-	.unit-l-1-4 {
-		width: 25%;
+	.unit-l-1-2 {
+		width: 50%;
 	}
 	
 	.about p {
