--- a/css/main.css
+++ b/css/main.css
@@ -384,6 +384,7 @@ img {
 .portfolio {
 	position: relative;
 	top: -6.5em;
+	padding-top: 1.55em;
 }
 
 .portfolio h1 {
@@ -573,14 +574,14 @@ img {
 		font-size: 1.5em;
 	}
 	
-	.portfolio{
-		top: -4.5em;
+	.portfolio {
+		padding-top: 1.55em;
 	}
 }
 
 @media only screen and (min-width: 60em) {
-	.unit-l-1-2 {
-		width: 50%;
+	.unit-l-1-4 {
+		width: 25%;
 	}
 	
 	.about p {
