--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ img {
 
 .error {
 	text-align: center;
-	background: transparent  url('../img/other-8.png') no-repeat center top;
+	background: transparent  url('../img/other-3.png') no-repeat center top;
 	background-size: cover;
 	display: block;
 	margin: auto;
@@ -161,7 +161,7 @@ img {
 
 .nav a:hover,
 .nav a:active {
-	color: rgba(191,222,213,1.00);
+	color: rgba(154,214,204,1.00);
 	background-color: rgba(0,0,0,.5);
 }
 
@@ -185,7 +185,7 @@ img {
 
 .home {
 	text-align: center;
-	background: transparent url('../img/other-8-small-screen.png') no-repeat center center;
+	background: transparent url('../img/other-8-top.png') no-repeat center center;
 	background-size: cover;
 	padding: 12em 0;
 }
@@ -388,7 +388,7 @@ img {
 }
 
 .portfolio h1 {
-	background-color: rgba(191,222,213,.5);
+	background-color: rgba(255,255,255,1.00);
 	color: rgba(0,0,0,1.00);
 	font-size: 1.2em;
 	font-style: italic;
@@ -404,7 +404,8 @@ img {
 .contact {
 	text-align: center;
 	padding: 4em 0 0;
-	background-color: rgba(191,222,213,1);
+	background: transparent url('../img/other-8-small-screen.png') no-repeat center center;
+	background-size: cover;
 }
 .contact img {
 	width: 70px;
@@ -439,7 +440,7 @@ img {
 	font-size: .75em;
 	padding: 2em;
 	margin-top: 2em;
-	background-color: rgba(191,222,213,1);
+	background-color: rgba(255,255,255,.75);
 }
 
 /*-------------------------SOCIAL LINKS SECTION-------------------------*/
@@ -534,12 +535,12 @@ img {
 	.nav a:hover,
 	.nav a:active {	
     	opacity: .75;
-		color: rgba(191,222,213,1.00);
+		color: rgba(154,214,204,1.00);
 	}
 	
 	.home {
 		padding: 20em 0; 
-		background: transparent url('../img/other-8-small-screen.png') no-repeat center center;
+		background: transparent url('../img/other-8-top.png') no-repeat center center;
 	background-size: cover;
 	}
 
