--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ HELP WANTED FOR THE PORTFOLIO SECTION: Slideshow is unable to move on mobile. I'
 
 -------------------------*/
 
-
 @-moz-viewport { width: device-width; scale: 1;}
 @-ms-viewport { width: device-width; scale: 1;}
 @-webkit-viewport { width: device-width; scale: 1;}
@@ -85,7 +84,7 @@ img {
 
 .nav-logo {
 	position: fixed;
-	background-color: rgba(255,255,255,.75);
+	background-color: rgba(255,255,255,.25);
 	width: 100%;
 	height: 6em;
 	z-index: 200;
@@ -130,7 +129,7 @@ img {
 
 .nav-btn:hover,
 .nav-btn:active {
-	opacity: .5;
+	opacity: .25;
 	transition: opacity 300ms ease-in;
 	-moz-transition: opacity 300ms ease-in;
 	-webkit-transition: opacity 300ms ease-in;
@@ -144,10 +143,10 @@ img {
 	text-align: center;
 	padding: 1em;
 	top: 2em;
-	color: rgba(0,0,0,1.00);
+	color: rgba(255,255,255,1.00);
 	text-decoration: none;
 	border: none;
-	background-color: rgba(255,255,255,.25);
+	background-color: rgba(0,0,0,.25);
 	transition: color 300ms ease-in;
 	-moz-transition: color 300ms ease-in;
 	-webkit-transition: color 300ms ease-in;
@@ -162,7 +161,7 @@ img {
 .nav a:hover,
 .nav a:active {
 	color: rgba(154,214,204,1.00);
-	background-color: rgba(0,0,0,.5);
+	background-color: rgba(255,255,255,.25);
 }
 
 .nav-top {
@@ -185,7 +184,7 @@ img {
 
 .home {
 	text-align: center;
-	background: transparent url('../img/other-8-top.png') no-repeat center center;
+	background: transparent url('../img/cover.jpg') no-repeat center center;
 	background-size: cover;
 	padding: 12em 0;
 }
@@ -465,7 +464,7 @@ img {
 .social li a:hover,
 .social li a:active,
 .social li a:focus {
-	color: rgba(255,255,255,1.00);
+	color: rgba(154,214,204,1.00);
 	transition: color 300ms ease-in;
 	-moz-transition: color 300ms ease-in;
 	-webkit-transition: color 300ms ease-in;
@@ -540,7 +539,7 @@ img {
 	
 	.home {
 		padding: 20em 0; 
-		background: transparent url('../img/other-8-top.png') no-repeat center center;
+		background: transparent url('../img/cover.jpg') no-repeat center center;
 	background-size: cover;
 	}
 
