--- a/css/main.css
+++ b/css/main.css
@@ -37,13 +37,13 @@ fieldset, pre, table {
   font-weight: 100;
 }
 
+img {
+	width: 100%;
+}
+
 ul {
 	list-style-type:none;
 	padding: 0;
-}
-
-img {
-	width: 100%;
 }
 
 .error {
@@ -186,11 +186,11 @@ img {
 	text-align: center;
 	background: transparent url('../img/cover.jpg') no-repeat center center;
 	background-size: cover;
-	padding: 12em 0;
+	padding: 8em 0;
 }
 
 .main-logo {
-	width: 300px;
+	width: 200px;
 	opacity: 0;
 }
 
@@ -309,7 +309,7 @@ img {
 
 .about {
 	background-color: rgba(255,255,255,1.00);
-	padding: 0em 0 3em;
+	padding: 5em 0 3em;
 }
 
 .about img {
@@ -380,12 +380,6 @@ img {
 	opacity: 1;
 }
 
-.portfolio {
-	position: relative;
-	top: -6.5em;
-	padding-top: 1.55em;
-}
-
 .portfolio h1 {
 	background-color: rgba(255,255,255,1.00);
 	color: rgba(0,0,0,1.00);
@@ -411,7 +405,6 @@ img {
 	opacity: 1;
 	padding: 4em 0 0;
 }
-
 
 .contact img:hover {
 	opacity: .5;
@@ -492,12 +485,12 @@ img {
 		padding-left: .75em;
 	}
 	
-	.unit-m-1 {
-		width: 100%;
+	.main-logo {
+		width: 300px;
 	}
 	
 	.unit-m-1-2 {
-		width: 100%;
+		width: 50%;
 	}
 		
 	.nav li {
@@ -538,11 +531,15 @@ img {
 	}
 	
 	.home {
-		padding: 20em 0; 
+		padding: 12em 0 12em; 
 		background: transparent url('../img/cover.jpg') no-repeat center center;
 	background-size: cover;
 	}
-
+	
+	.about {
+		padding: 12em 0;
+	}
+	
 	.about img {
 		width: 400px;
 	}
@@ -573,15 +570,15 @@ img {
 	.error p {
 		font-size: 1.5em;
 	}
-	
-	.portfolio {
-		padding-top: 1.55em;
-	}
 }
 
 @media only screen and (min-width: 60em) {
 	.unit-l-1-4 {
 		width: 25%;
+	}
+	
+		.unit-l-1-3 {
+		width: 33.33%;
 	}
 	
 	.about p {
