--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ ul {
 
 .nav-logo {
 	position: fixed;
-	background-color: rgba(255,255,255,.25);
+	background-color: rgba(255,255,255,0);
 	width: 100%;
 	height: 6em;
 	z-index: 200;
@@ -93,7 +93,7 @@ ul {
 
 .nav-logo img {
 	width: 90px;
-	padding-top: 1.7em;
+	padding-top: 1em;
 	padding-left: 1em;
 	background-color: rgba(0,0,0,0);
 }
@@ -120,8 +120,8 @@ ul {
 .nav-btn:link,
 .nav-btn:visited {
 	position: fixed;
-	top: 15px;
-	right: 0px;
+	top: 20px;
+	right: 20px;
 	height: 60px;
 	width: 60px;
 	background: rgba(0,0,0,0) url('../img/nav-icon.svg') no-repeat right center;
@@ -143,10 +143,10 @@ ul {
 	text-align: center;
 	padding: 1em;
 	top: 2em;
-	color: rgba(255,255,255,1.00);
+	color: rgba(0,0,0,1.00);
 	text-decoration: none;
 	border: none;
-	background-color: rgba(0,0,0,.25);
+	background-color: rgba(255,255,255,.5);
 	transition: color 300ms ease-in;
 	-moz-transition: color 300ms ease-in;
 	-webkit-transition: color 300ms ease-in;
@@ -161,7 +161,7 @@ ul {
 .nav a:hover,
 .nav a:active {
 	color: rgba(154,214,204,1.00);
-	background-color: rgba(255,255,255,.25);
+	background-color: rgba(0,0,0,.25);
 }
 
 .nav-top {
@@ -187,6 +187,7 @@ ul {
 	background: transparent url('../img/cover.jpg') no-repeat center center;
 	background-size: cover;
 	padding: 8em 0;
+	margin: 1em;
 }
 
 .main-logo {
@@ -380,6 +381,16 @@ ul {
 	opacity: 1;
 }
 
+.photos li {
+	margin-bottom: .8em;
+	margin-left: 1em;
+}
+
+.portfolio {
+	margin: 1em;
+	margin-left: 0em;
+}
+
 .portfolio h1 {
 	background-color: rgba(255,255,255,1.00);
 	color: rgba(0,0,0,1.00);
@@ -480,7 +491,11 @@ ul {
 }
 
 @media only screen and (min-width: 32em) {
-	.nav-logo{
+	.small-logo {
+		padding-left: .5em;
+	}
+	
+	.nav-logo {
 		text-align: left;
 		padding-left: .75em;
 	}
@@ -495,7 +510,8 @@ ul {
 		
 	.nav li {
 		display: inline-block;
-		padding-top: 1.25em;
+		padding-top: 1.85em;
+		padding-left: .05em;
 	}
 	
 	.nav-btn {
@@ -509,7 +525,7 @@ ul {
 	
 	.nav ul {
 		float: right;
-		padding-right: 1em;
+		padding-right: 2.25em;
 	}
 	
 	.nav a,
