--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ ul {
 
 .home {
 	text-align: center;
-	background: transparent url('../img/cover.jpg') no-repeat center center;
+	background: transparent url('../img/hk.png') no-repeat center center;
 	background-size: cover;
 	padding: 8em 0;
 	margin: 1em;
@@ -548,9 +548,9 @@ ul {
 	
 	.home {
 		padding: 12em 0 12em; 
-		background: transparent url('../img/cover.jpg') no-repeat center center;
+		background: transparent url('../img/hk.png') no-repeat center center;
 	background-size: cover;
-	}
+	} 
 	
 	.about {
 		padding: 12em 0;
